@@ -4,7 +4,7 @@ license = Perl_5
 copyright_holder = Greg Fast
 copyright_year   = 1999
 
-version = 0.26
+version = 0.27
 
 [@Basic]
 [PkgVersion]
