@@ -2,6 +2,8 @@ Revision history for Perl module Lingua::EN::Syllable
 
 0.27 2015-02-24 NEILB
     - Refactored test to be data-driven using Test::More
+    - Apart from 'w', single-letter words now return a syllable count of 1.
+      RT#101177, thanks to jgstratt.
 
 0.26 2014-06-10 NEILB
     - Switched to Dist::Zilla
